--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,17 @@
 {
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true,
   "python.linting.pylintArgs": [
     "--load-plugins=pylint_django",
     "--django-settings-module=levelup.settings"
   ]
 }
+
+// {
+//   "python.linting.pylintEnabled": true,
+//   "python.linting.enabled": true,
+//   "python.linting.pylintArgs": [
+//       "--load-plugins=pylint_django",
+//       "--django-settings-module=honeyrae.settings",
+//   ],
+// }
