--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,11 @@
   "python.linting.pylintArgs": [
     "--load-plugins=pylint_django",
     "--django-settings-module=levelup.settings"
-  ]
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.autopep8"
+  },
+  "python.formatting.provider": "none"
 }
 
 // {
